[workspace]
members = ["contracts/*", "packages/*"]

exclude = ["my_scripts", "artifacts", "contracts/cdp/src/testing/*", "contracts/stability-pool-vault/*"]


[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 'z'
overflow-checks = true
panic = 'abort'
rpath = false