[package]
name = "cdp"
version = "0.1.0"
authors = ["Membrane Devs"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []


[dependencies]
membrane = { path = "../../packages/membrane" }
osmo-bindings = { branch = "main", git = "https://github.com/osmosis-labs/bindings.git" }
osmosis-std = { version = "0.15.2" }
cosmwasm-std = { version = "1.0.0", features = ["stargate"] }
cosmwasm-schema = "1.0.0"
cosmwasm-storage = "1.0.0"
cw-storage-plus = "0.13.2"
cw2 = "0.13.2"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
wasm = "0.0.0"
apollo-cw-asset = "0.1.0"

[dev-dependencies]
cw-multi-test = "0.13.4"
