[package]
name = "cdp"
version = "0.1.0"
authors = ["Membrane Devs"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []


[dependencies]
membrane = { path = "../../packages/membrane" }
osmosis-std = { version = "0.15.2" }
cosmwasm-std = { version = "1.0.0", default-features = false, features = ["cosmwasm_1_1"] }
cosmwasm-schema = "1.1.0"
cw-storage-plus = "0.13.2"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
wasm = "0.0.0"

[dev-dependencies]
cw-multi-test = "0.13.4"
