[package]
name = "osmosis_proxy"
version = "0.1.0"
authors = ["trix"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
 
[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
membrane = { path = "../../packages/membrane" }
osmosis-std = { version = "0.12.0" }
prost = { version = "0.11.0" }
cosmwasm-std =  {version = "1.0.0", features = ["stargate"]}
cosmwasm-storage = "1.0.0"
cosmwasm-schema = "1.0.0"
cw-storage-plus = "0.13.2"
cw2 = "0.13.2"
cw20 = "0.13.2"
schemars = "0.8.8"
anyhow = "1.0"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
itertools = "0.10"

[dev-dependencies]
cosmwasm-schema = "1.0.0"
cw-multi-test = "0.13.4"